# xoshiro

./: Cargo.toml  README.md
benches/: bench.rs
src/: common.rs  lib.rs  splitmix64.rs  xoroshiro128plus.rs  xoroshiro128starstar.rs  xoroshiro64star.rs  xoroshiro64starstar.rs  xoshiro128plus.rs  xoshiro128starstar.rs  xoshiro256plus.rs  xoshiro256starstar.rs  xoshiro512plus.rs  xoshiro512starstar.rs
