[package]
authors = ["Vinzent Steinberg <Vinzent.Steinberg@gmail.com>"]
description = "Xoshiro, xoroshiro and splitmix64 random number generators"
documentation = "https://docs.rs/xoshiro"
keywords = ["rng"]
categories = ["algorithms"]
license = "MIT/Apache-2.0"
name = "xoshiro"
repository = "https://github.com/vks/xoshiro"
version = "0.0.4"

[[bench]]
harness = false
name = "bench"

[dependencies]
byteorder = "1"
rand_core = "0.3"

[dev-dependencies]
bencher = "0.1.5"
rand = "0.6"

[badges]
maintenance = { status = "deprecated" }
